--- a/README
+++ b/README
@@ -974,3 +974,4 @@
 			自定义实现读写锁:可以使用j.u.c包下的ReentrantReadWriteLock类来实现读写锁
 			ReentrantReadWriteLock.writeLock().lock()添加在写操作的方法中,并在finally中释放锁.
 			ReentrantReadWriteLock.readLock().lock()添加在读操作中,就可以实现读操作共享.
+link:https://gitee.com/XuanYuanXiaoJian/java_interview_questions/blob/master/%E9%9D%A2%E8%AF%95%E7%9B%B8%E5%85%B3.txt
